[package]
name = "multi_ssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssh = "*"
tokio = {version="*", features=["full"]}
serde = {version="*", features=["derive"]}
serde_json = {version="*"}
futures = "0.3.21"
rustyline = "9.1.2"
shellexpand = "2.1.0"
clap = {version="*", features=["derive"]}